--- a/paginaprincipal.html
+++ b/paginaprincipal.html
@@ -10,7 +10,7 @@
 		<div class='menu'>
 		
 			<img src="imagens/logo.jpeg" alt="some text" width='100'> <!--Logo-->
-			<a href="creditos.html"><div class="but fim"  >Créditos</div></a>
+			<a href="paginas/creditos.html"><div class="but fim"  >Créditos</div></a>
 			<a href='paginaprincipal.html'><div class="but">Início</div></a>
 	
 		</div>
